css/grids.css
/*
	specifying that all objects use
	the border-box model (not the content-box model)
*/
*, *::after, *::before {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}


/*
	specifying if the class of an item starts with
	'grid-col-', then we should apply the styling listed
*/
[class^='grid-col-'] {
	padding: 0; 
	margin: 0;
}


/*
	Here we are clearing floated items to ensure that
	our 'grid'  structure can have different rows
*/
.grid-row:after {
	content: "";
	display: block;
	clear: both;
}



/*
	grid for the top nav
*/
.grid-col-1of5 > .button-nav {
	float: right;
}

/* grid for social media footr nav */
.grid-col-1of5 > .media-nav {
	float: right;
}

/* grid for social media footr nav */
.grid-col-1of4 > .media-nav {
	float: right;
}

.grid-col-1of5 > .logo {
	float: left;
}

/*
	grid for main content
*/
.grid-col-3of12{
	width: 25%;
	float: left;
}

.grid-col-4of12{
	width: 33.33333333333%;
	float: left;
}

.grid-col-5of12 {
	width: 38%;
	float: left;
}

.grid-col-6of12{
	width: 50%;
	float: left;
}

.grid-col-8of12{
	width: 66.666%;
	float: left;
}

.grid-col-12of12{
	width: 100%;
	float: left;
}

/*
	grid for mobile nav
*/

.grid-col-1of4{
	width: 25%;
	float: left;
}

/*
	grid for calender
*/

.grid-col-1of7{
	width: 13.6%;
	float: left;
}


@media (max-width: 57em) {
  
.content-grid {
  top: 45%;
}

#header-main .section-label {
	top: 5%;
}

#header-main h1{
	top: 10%;
}

#header-main p {
	top: 25%;
}

.page-title {
	top: 20%;
}

.page-description {
	top: 32%;
}

.grid-col-4of12{
	width: 50%;
	float: left;
}

.grid-col-5of12 {
	width: 30%;
}

.grid-col-6of12 {
	width: 100%;
}

.grid-col-8of12{
	width: 50%;
	float: left;
}

.checkout-package-info {
  margin-left: 0;
  margin-right: auto;
  padding: 0.2em 4em;
}

.checkout-forms {
	width: 100%;
	padding: 0.2em 3em;
}

.product-image {
  position: relative;
  left: 15%;
  top: 7em;
  width: 100%;
  height: auto;
}

.package-detail-info {
  top: 3em;
  width: 90%;
  padding: 0.2em 2em;
}

.price-box {
	top: 1.5em;
}

#header-main p{
	font-size: 1.1rem;
	line-height: 1.5em;
}

.description-nav{
    font-size: 0.7em;
}

}

@media (max-width: 51em) {

.grid-col-8of12{
	width: 100%;
	float: left;
}

}

@media (max-width: 37em) {
  
.content-grid {
  top: 33%;
}

.page-title-blog {
	color: #4B4F56;
	font-size: 1.8rem;
}

#header-main .section-label {
	color: #4B4F56;
	top: 11%;
}

#header-main .desc {
	display: none;
}

.page-title {
	color: #4B4F56;
	font-size: 1.8rem;
	top: 17%;
}

.page-description {
	display: none;
}

.date-title h1 {
	font-size: 1.8rem;
}

.grid-col-3of12{
	width: 100%;
	float: left;
}

.grid-col-4of12{
	width: 100%;
	float: left;
}

.grid-col-5of12 {
	width: 100%;
}

.grid-col-6of12{
	width: 100%;
	float: left;
}

.grid-col-12of12{
	width: 100%;
	float: left;
}

#header-main {
	background: white;
}

#header-main img{
	display: none;
}

#header-main h1{
	top: 10%;
}

#header-main p {
	top: 20%;
	color: black;
	font-size: 0.8em;
}

.page-title {
	top: 20%;
}

.product-image {
  position: relative;
  display: inline-block;
  overflow: scroll;
  left: 0;
  top: 7em;
}

.pk-features-info {
  position: relative;
  width: 85%;
  margin-left: auto;
  margin-right: auto;
  padding: 1em 2em 4em 2em;
}

.pk-detail-caption {
  font-size: 1.1rem;
  left: 0%;
  width: 90%;
  padding-left: 2em;
}

.package-detail-info {
  position: relative;
  display: block;
  left: 0%;
  width: 90%;
  padding: 0.2em 2em;
}

.package-detail-info h1 {
  font-size: 2em;
}



.testimonial img{
	display: none;
}

.testimonial p{
	padding-left: 6em;
	padding-right: 6em;
}
}

/*nav breakpoint*/
@media (max-width: 34em) {
	.logo {
		display: none;
	}

	.button-nav {
		display: none;
	}

	.media-nav {
		display: none;
	}

	.icon-nav {
		display: inline-block;
	}
}

/*Calender breakpoints RIP*/

@media (max-width: 71em) {

.cal-month {
	width: 75%;
}

.day-cell {
	padding: .3 .5em;
}

.day-cell-unavailable{
	padding: .3 .5em;
}

.filler-cell {
	padding: .3 .5em;
}

}

@media (max-width: 62em) {

.cal-month {
	width: 80%;
	margin-left: auto;
	margin-right: auto;
}

.grid-col-1of7 {
	width: 12%;
}

.day-cell {
	font-size: 1.5rem;
	padding: 1em .3em;
}

.day-cell-unavailable{
	font-size: 1.5rem;
	padding: 1em .3em;
}

.filler-cell {
	font-size: 1.5rem;
	padding: 1em .3em;
}


}

@media (max-width: 33em) {

.cal-month {
	width: 100%;
	margin-left: auto;
	margin-right: auto;
}

.cal-month li {
  display: inline-block;
  position: relative;
  margin: 0 0.2em 0.2em 0;
  padding: 0;
  text-align: center;
}


.day-cell {
	font-size: 1rem;
	padding: 1em 0em;
}

.weekdays {
	font-size: .5rem;
}

.day-cell-unavailable{
	font-size: 1rem;
	padding: 1em 0em;
}

.filler-cell {
	font-size: 1rem;
	padding: 1em 0em;
}

}

